deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice
spec:
  selector:
    matchLabels:
      app: juice
  replicas: 3
  template: # template for the pods
    metadata:
      labels:
        app: juice
    spec:
      containers:
      - name: juice
        image: bkimminich/juice-shop:latest
