service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice
spec:
  selector:
    app: juice
  ports:
    - name: http
      port: 3000
      nodePort: 30030
  type: NodePort
