ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basicingress
spec:
  rules:
    - host: obs.task.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice
                port: 
                  number: 3000
